progress section complete

--- a/index.html
+++ b/index.html
@@ -83,7 +83,40 @@
           </div>
         </div>
       </div>
-      <div></div>
+      <!-- club section text -->
+      <div class="text-center m-32">
+        <h3 class="font-extrabold text-4xl mb-6">Professional Hockeys Club</h3>
+        <p class="text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br>dolor. Purus urna in sit nullam proin. </p>
+      </div>
+      <!-- club section object loading -->
+      <div class="grid grid-rows-1 lg:grid-cols-4 m-auto my-32">
+        <div class="text-center">
+          <div class="radial-progress text-[#FF4240]" style="--value:87; --size:7rem" role="progressbar">87%</div>
+          <h3 class="font-bold text-3xl text-center">Experienced Coach</h3>
+          <p class="text-[#13131899]">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <div class="text-center">
+          <div class="radial-progress text-[#49D293]" style="--value:87; --size:7rem" role="progressbar">87%</div>
+          <h3 class="font-bold text-3xl text-center">Prayer Facility</h3>
+          <p class="text-[#13131899]">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <div class="text-center">
+          <div class="radial-progress text-[#FFB546]" style="--value:87; --size:7rem" role="progressbar">87%</div>
+          <h3 class="font-bold text-3xl text-center">Prayer Facility</h3>
+          <p class="text-[#13131899]">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+        <div class="text-center">
+          <div class="radial-progress text-[#4C8DF1]" style="--value:87; --size:7rem" role="progressbar">87%</div>
+          <h3 class="font-bold text-3xl text-center">Prayer Facility</h3>
+          <p class="text-[#13131899]">Amet consectetur. Condimentum <br> dignissim adipiscing .</p>
+        </div>
+      </div>
+      <!-- program section -->
+      <div class="text-center m-32">
+        <h3 class="font-extrabold text-4xl mb-6">Program Sections</h3>
+        <p class="text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+      </div>
+      <!-- register hero section -->
     </main>
     <footer></footer>
 </body>
