--- a/index.html
+++ b/index.html
@@ -112,12 +112,73 @@
         </div>
       </div>
       <!-- program section -->
-      <div class="text-center m-32">
+      <div class="text-center ">
         <h3 class="font-extrabold text-4xl mb-6">Program Sections</h3>
-        <p class="text-[#13131899]">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
+        <p class="text-[#13131899] mb-32">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat <br> dolor. Purus urna in sit nullam proin. </p>
       </div>
-      <!-- register hero section -->
+      <!-- register hero section  -->
+      <div class="flex justify-center px-40 sm:flex-row">
+        <div class="flex-1 bg-no-repeat" style="background-image: url(images/2.png);">
+          <div class="bg-opacity-60"></div>
+          <div class="px-3 py-24 text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-4xl font-bold">Junior Program</h1>
+              <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <button class="btn bg-[#ff4240] text-white border-none">Register Now!</button>
+            </div>
+          </div>
+        </div>
+        <div class="flex-1 bg-no-repeat" style="background-image: url(images/3.png);">
+          <div class="bg-opacity-60"></div>
+          <div class="px-3 py-24 text-neutral-content">
+            <div class="max-w-md">
+              <h1 class="mb-5 text-4xl font-bold">Teenager Program</h1>
+              <p class="mb-5">Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit 
+                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor congue sed et in.</p>
+              <button class="btn bg-[#ff4240] text-white border-none">Register Now!</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class=" container w-full px-56">
+        <div class="w-full bg-no-repeat" style="background-image: url(images/4.png);">
+          <div class="hero-overlay bg-opacity-60"></div>
+          <div class="text-neutral-content">
+            <div class="py-40 px-5 max-w-md">
+              <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
+              <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+              <button class="btn bg-[#ff4240] text-white border-none">Get Started</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer></footer>
+    <footer class="footer p-10 bg-black text-white">
+      <aside>
+        <h3>Get In Touch</h3>
+        <p>Dit amet consectetur. Condimentum <br> adipiscing aliquam turpis placerat dolor. Purus <br> urna in sit nullam proin. </p>
+      </aside> 
+      <nav>
+        <h6 class="footer-title">Company</h6> 
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav> 
+      <nav>
+        <h6 class="footer-title">Support</h6> 
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav> 
+      <nav>
+        <h6 class="footer-title">Services</h6> 
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+    </footer>
 </body>
 </html>
